--- a/themes/new-bootstrap2/templates/base.html
+++ b/themes/new-bootstrap2/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>{% block title %}Blog about Me and my Linux{% endblock %} | {{ SITENAME }}</title>
+    <title>{{ SITENAME }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="{{ KEYWORDS }}" />
     <meta name="author" content="{{ AUTHOR }}" />
