--- a/themes/new-bootstrap2/templates/sidebar.html
+++ b/themes/new-bootstrap2/templates/sidebar.html
@@ -28,7 +28,10 @@
 {% endfor %}
 
 {% if 'tag_cloud' in PLUGINS %}
+<!--
 <li class="nav-header"><a href="{{ SITEURL }}/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+-->
+<li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 {# <li>
 <div id="tags">
   <ul>#}
